fix: user dropdown padding on mobile

--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -40,7 +40,7 @@ $button-height: 34px;
 
 $switch-view-height: 2.69rem;
 
-$user-dropdown-width-mobile: 4rem;
+$user-dropdown-width-mobile: 5rem;
 $hamburger-menu-icon-spacing: 1rem;
 $hamburger-menu-icon-width: 28px;
 $navbar-height: 4rem;
